# conflixis-data-projects

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  SECURITY_PATCHES.md  analyze_bq_schema.py  bigquery_optimization_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_notebook.sh  test_setup.py
analysis_output/: schema_analysis_report.md
archive/011-disclosure-policy-review/: dashboard-research-coi-compliance-overview.html  detailed_category_analysis.py  disclosure-json-viewer.html  explore_json_table.py  requirements.txt  stats_2025_only.py
archive/182-healthcare-coi-analytics-report-template/: cli_standalone.py
archive/name-matching-legacy/: README.md
archive/temp-datadictionary/: general_payments_fields_final.json  general_payments_fields_improved.json  general_payments_fields_robust.json  ownership_fields.json  ownership_fields_final.json  ownership_fields_final_v2.json  ownership_fields_robust.json  research_payments_fields_final_v2.json  research_payments_fields_robust.json  research_payments_section.txt
archive/z_002-analytic-agent/: README.md  load-env.js  package-lock.json  package.json  tailwind.config.ts  test-api.js  test-field-type.sql  test-fix.sh
claude-plans/: setup-instructions.md
docs/: physician-rx.md  rx-op-enhanced.md  vercel-migration-011-disclosure-policy-review.md  y8tRUmpf0M8tAUM7tzeB-dim_NPIs.csv
projects/: DEPRECATED_PROJECTS.md
projects/001-risk-assessment-new/: IMPLEMENTATION_TRACKING.md  README.md  Risk_assessment_new.ipynb
projects/005-core-name-matching-test/: .env.example  .gitignore  README.md  config.yaml  requirements.txt  run_matching.py  (+1 more)
(+968 files in other folders)
