[tool.poetry]
name = "conflixis-analytics"
version = "0.1.0"
description = "Collaborative data analytics repository"
authors = ["Conflixis Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
google-cloud-bigquery = "^3.11.0"
google-cloud-bigquery-storage = "^2.22.0"
pyarrow = "^12.0.0"
db-dtypes = "^1.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
pre-commit = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"